--- a/notebooks/train.ipynb
+++ b/notebooks/train.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,11 +12,11 @@
     "                \"num_frames\": 5,\n",
     "                \"random_initial_frame\": False,\n",
     "                \"depth_anything_size\": \"Small\",\n",
-    "                \"num_video\": 10,\n",
+    "                \"num_video\": 20,\n",
     "                \"frame_threshold\": 10,\n",
     "            },\n",
     "            \"dataloader\": {\n",
-    "                \"batch_size\": 1,\n",
+    "                \"batch_size\": 2,\n",
     "                \"repvit_model\": \"repvit_m0_9.dist_300e_in1k\",\n",
     "            },\n",
     "            \"transformer\": {\n",
@@ -27,8 +27,8 @@
     "            },\n",
     "            \"train\": {\n",
     "                \"learning_rate\": 0.001,\n",
-    "                \"epochs\": 3,\n",
-    "                \"log_dir\": \"data/runs/exp1\",\n",
+    "                \"epochs\": 10,\n",
+    "                \"log_dir\": \"../data/runs/exp1\",\n",
     "                \"early_stop_counter\": 10,\n",
     "                \"train_size\": 0.5,\n",
     "                \"val_size\": 0.3,\n",
@@ -40,365 +40,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Training and validating:   0%|          | 0/3 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "depth_frames.shape=torch.Size([1, 5, 384]),rgb_frames.shape=torch.Size([1, 5, 384]),labels.shape=torch.Size([1])\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": []
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "depth_frames.shape=torch.Size([1, 5, 384]),rgb_frames.shape=torch.Size([1, 5, 384]),labels.shape=torch.Size([1])\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": []
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "depth_frames.shape=torch.Size([1, 5, 384]),rgb_frames.shape=torch.Size([1, 5, 384]),labels.shape=torch.Size([1])\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": []
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "depth_frames.shape=torch.Size([1, 5, 384]),rgb_frames.shape=torch.Size([1, 5, 384]),labels.shape=torch.Size([1])\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": []
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "depth_frames.shape=torch.Size([1, 5, 384]),rgb_frames.shape=torch.Size([1, 5, 384]),labels.shape=torch.Size([1])\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 5/5 [00:25<00:00,  5.20s/it]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "EXIT TRAIN...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": []
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "depth_frames.shape=torch.Size([1, 5, 384]),rgb_frames.shape=torch.Size([1, 5, 384]),labels.shape=torch.Size([1])\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": []
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "depth_frames.shape=torch.Size([1, 5, 384]),rgb_frames.shape=torch.Size([1, 5, 384]),labels.shape=torch.Size([1])\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 3/3 [00:10<00:00,  3.61s/it]\n",
-      "Training and validating:  33%|███▎      | 1/3 [00:36<01:13, 36.90s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "depth_frames.shape=torch.Size([1, 5, 384]),rgb_frames.shape=torch.Size([1, 5, 384]),labels.shape=torch.Size([1])\n",
-      "SAVING CHECKPOINT...\n",
-      "SAVING RUN FOR TENSORBOARD...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": []
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "depth_frames.shape=torch.Size([1, 5, 384]),rgb_frames.shape=torch.Size([1, 5, 384]),labels.shape=torch.Size([1])\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": []
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "depth_frames.shape=torch.Size([1, 5, 384]),rgb_frames.shape=torch.Size([1, 5, 384]),labels.shape=torch.Size([1])\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": []
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "depth_frames.shape=torch.Size([1, 5, 384]),rgb_frames.shape=torch.Size([1, 5, 384]),labels.shape=torch.Size([1])\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": []
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "depth_frames.shape=torch.Size([1, 5, 384]),rgb_frames.shape=torch.Size([1, 5, 384]),labels.shape=torch.Size([1])\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": []
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "depth_frames.shape=torch.Size([1, 5, 384]),rgb_frames.shape=torch.Size([1, 5, 384]),labels.shape=torch.Size([1])\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 5/5 [00:43<00:00,  8.74s/it]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "EXIT TRAIN...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": []
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "depth_frames.shape=torch.Size([1, 5, 384]),rgb_frames.shape=torch.Size([1, 5, 384]),labels.shape=torch.Size([1])\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": []
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "depth_frames.shape=torch.Size([1, 5, 384]),rgb_frames.shape=torch.Size([1, 5, 384]),labels.shape=torch.Size([1])\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 3/3 [00:13<00:00,  4.54s/it]\n",
-      "Training and validating:  67%|██████▋   | 2/3 [01:34<00:48, 48.96s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "depth_frames.shape=torch.Size([1, 5, 384]),rgb_frames.shape=torch.Size([1, 5, 384]),labels.shape=torch.Size([1])\n",
-      "SAVING CHECKPOINT...\n",
-      "SAVING RUN FOR TENSORBOARD...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": []
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "depth_frames.shape=torch.Size([1, 5, 384]),rgb_frames.shape=torch.Size([1, 5, 384]),labels.shape=torch.Size([1])\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": []
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "depth_frames.shape=torch.Size([1, 5, 384]),rgb_frames.shape=torch.Size([1, 5, 384]),labels.shape=torch.Size([1])\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": []
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "depth_frames.shape=torch.Size([1, 5, 384]),rgb_frames.shape=torch.Size([1, 5, 384]),labels.shape=torch.Size([1])\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": []
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "depth_frames.shape=torch.Size([1, 5, 384]),rgb_frames.shape=torch.Size([1, 5, 384]),labels.shape=torch.Size([1])\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": []
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "depth_frames.shape=torch.Size([1, 5, 384]),rgb_frames.shape=torch.Size([1, 5, 384]),labels.shape=torch.Size([1])\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 5/5 [00:35<00:00,  7.02s/it]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "EXIT TRAIN...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": []
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "depth_frames.shape=torch.Size([1, 5, 384]),rgb_frames.shape=torch.Size([1, 5, 384]),labels.shape=torch.Size([1])\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": []
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "depth_frames.shape=torch.Size([1, 5, 384]),rgb_frames.shape=torch.Size([1, 5, 384]),labels.shape=torch.Size([1])\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 3/3 [00:32<00:00, 10.86s/it]\n",
-      "Training and validating: 100%|██████████| 3/3 [02:42<00:00, 54.02s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "depth_frames.shape=torch.Size([1, 5, 384]),rgb_frames.shape=torch.Size([1, 5, 384]),labels.shape=torch.Size([1])\n",
-      "SAVING CHECKPOINT...\n",
-      "SAVING RUN FOR TENSORBOARD...\n",
-      "Model saved: data\\runs\\exp1\\models\\TransformerFakeDetector\\TransformerFakeDetector.pth\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from megatron.trainer import Config,Trainer\n",
     "\n",
@@ -409,53 +53,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The tensorboard extension is already loaded. To reload it, use:\n",
-      "  %reload_ext tensorboard\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Reusing TensorBoard on port 6006 (pid 11116), started 0:43:03 ago. (Use '!kill 11116' to kill it.)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "      <iframe id=\"tensorboard-frame-24e861bef77da601\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
-       "      </iframe>\n",
-       "      <script>\n",
-       "        (function() {\n",
-       "          const frame = document.getElementById(\"tensorboard-frame-24e861bef77da601\");\n",
-       "          const url = new URL(\"http://localhost\");\n",
-       "          const port = 6006;\n",
-       "          if (port) {\n",
-       "            url.port = port;\n",
-       "          }\n",
-       "          frame.src = url;\n",
-       "        })();\n",
-       "      </script>\n",
-       "    "
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext tensorboard\n",
     "\n",
