updated the train jupyter

--- a/notebooks/train.ipynb
+++ b/notebooks/train.ipynb
@@ -6,6 +6,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "try:\n",
+    "  import megatron\n",
+    "except ImportError:\n",
+    "  !pip install https://github.com/valerio98-lab/Megatron_DeepFake/releases/download/beta/megatron-0.1.0.tar.gz --quiet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from google.colab import drive\n",
+    "drive.mount('/content/drive')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "experiments = [\n",
     "    {\n",
     "        \"dataset\": {\n",
