--- a/notebooks/train.ipynb
+++ b/notebooks/train.ipynb
@@ -31,13 +31,55 @@
     "experiments = [\n",
     "    {\n",
     "        \"dataset\": {\n",
-    "            \"video_path\": r\"H:\\My Drive\\Megatron_DeepFake\\dataset\",\n",
-    "            \"num_frames\": 5,\n",
+    "            \"video_path\": r\"./drive/MyDrive/Megatron_DeepFake/dataset_processed\",\n",
+    "            \"num_frames\": 20,\n",
     "            \"random_initial_frame\": False,\n",
     "            \"depth_anything_size\": \"Small\",\n",
     "        },\n",
     "        \"dataloader\": {\n",
-    "            \"batch_size\": 32,\n",
+    "            \"batch_size\": 120,\n",
+    "            \"repvit_model\": \"repvit_m0_9.dist_300e_in1k\",\n",
+    "            \"num_workers\": 0,\n",
+    "            \"pin_memory\":False\n",
+    "        },\n",
+    "        \"transformer\": {\n",
+    "            \"d_model\": 384,\n",
+    "            \"n_heads\": 2,\n",
+    "            \"n_layers\": 1,\n",
+    "            \"d_ff\": 1024,\n",
+    "        },\n",
+    "        \"train\": {\n",
+    "            \"learning_rate\": 0.001,\n",
+    "            \"epochs\": 3,\n",
+    "            \"tmp_dir\" : \"./drive/MyDrive/Megatron_DeepFake/batches\",\n",
+    "            \"log_dir\": \".//drive/MyDrive/Megatron_DeepFake/data\",\n",
+    "            \"early_stop_counter\": 10,\n",
+    "            \"resume_training\": False,\n",
+    "            \"train_size\": 0.5,\n",
+    "            \"val_size\": 0.3,\n",
+    "            \"test_size\": 0.2,\n",
+    "        },\n",
+    "        \"seed\": 42,\n",
+    "    }\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "experiments = [\n",
+    "    {\n",
+    "        \"dataset\": {\n",
+    "            \"video_path\": r\"H:\\My Drive\\Megatron_DeepFake\\dataset_processed\",\n",
+    "            \"num_frames\": 20,\n",
+    "            \"random_initial_frame\": False,\n",
+    "            \"depth_anything_size\": \"Small\",\n",
+    "        },\n",
+    "        \"dataloader\": {\n",
+    "            \"batch_size\": 128,\n",
     "            \"repvit_model\": \"repvit_m0_9.dist_300e_in1k\",\n",
     "            \"num_workers\": 0,\n",
     "            \"pin_memory\":False\n",
@@ -66,9 +108,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dataloader_start_index=28\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7355516367374306ba924e87e9fc6597",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Caching train data:  24%|##4       | 28/115 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import torch \n",
     "import random\n",
@@ -106,10 +170,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([128, 20, 384])\n",
+      "torch.Size([128, 20, 384])\n",
+      "torch.Size([128, 20, 384])\n",
+      "torch.Size([128, 20, 384])\n",
+      "torch.Size([128, 20, 384])\n",
+      "torch.Size([128, 20, 384])\n",
+      "torch.Size([128, 20, 384])\n",
+      "torch.Size([128, 20, 384])\n",
+      "torch.Size([128, 20, 384])\n",
+      "torch.Size([128, 20, 384])\n",
+      "torch.Size([128, 20, 384])\n",
+      "torch.Size([128, 20, 384])\n",
+      "torch.Size([128, 20, 384])\n",
+      "torch.Size([128, 20, 384])\n",
+      "torch.Size([128, 20, 384])\n",
+      "torch.Size([128, 20, 384])\n",
+      "torch.Size([128, 20, 384])\n",
+      "torch.Size([128, 20, 384])\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import torch\n",
+    "path = r\"H:\\My Drive\\Megatron_DeepFake\\batches - backup\\all\\batch_size_128\\num_frames_20\\depth_anything_size_Small\\repvit_model_repvit_m0_9dist_300e_in1k\\d_model_384\\\\\"\n",
+    "\n",
+    "\n",
+    "for elem in os.listdir(path):\n",
+    "    if \"train_rgb_batch_\" in elem:\n",
+    "        try:\n",
+    "            print(torch.load(path+elem,weights_only=True).shape)\n",
+    "        except:\n",
+    "            print(elem)\n"
+   ]
   },
   {
    "cell_type": "code",
