--- a/notebooks/train.ipynb
+++ b/notebooks/train.ipynb
@@ -6,10 +6,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "try:\n",
-    "  import megatron\n",
-    "except ImportError:\n",
-    "  !pip install https://github.com/valerio98-lab/Megatron_DeepFake/releases/download/beta/megatron-0.1.0.tar.gz --quiet"
+    "# try:\n",
+    "#   import megatron\n",
+    "# except ImportError:\n",
+    "#   !pip install https://github.com/valerio98-lab/Megatron_DeepFake/releases/download/beta/megatron-0.1.0.tar.gz --quiet"
    ]
   },
   {
@@ -18,8 +18,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from google.colab import drive\n",
-    "drive.mount('/content/drive')"
+    "# from google.colab import drive\n",
+    "# drive.mount('/content/drive')"
    ]
   },
   {
@@ -28,40 +28,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiments = [\n",
-    "    {\n",
-    "        \"dataset\": {\n",
-    "            \"video_path\": r\"./drive/MyDrive/Megatron_DeepFake/dataset_processed\",\n",
-    "            \"num_frames\": 20,\n",
-    "            \"random_initial_frame\": False,\n",
-    "            \"depth_anything_size\": \"Small\",\n",
-    "        },\n",
-    "        \"dataloader\": {\n",
-    "            \"batch_size\": 120,\n",
-    "            \"repvit_model\": \"repvit_m0_9.dist_300e_in1k\",\n",
-    "            \"num_workers\": 0,\n",
-    "            \"pin_memory\":False\n",
-    "        },\n",
-    "        \"transformer\": {\n",
-    "            \"d_model\": 384,\n",
-    "            \"n_heads\": 2,\n",
-    "            \"n_layers\": 1,\n",
-    "            \"d_ff\": 1024,\n",
-    "        },\n",
-    "        \"train\": {\n",
-    "            \"learning_rate\": 0.001,\n",
-    "            \"epochs\": 3,\n",
-    "            \"tmp_dir\" : \"./drive/MyDrive/Megatron_DeepFake/batches\",\n",
-    "            \"log_dir\": \".//drive/MyDrive/Megatron_DeepFake/data\",\n",
-    "            \"early_stop_counter\": 10,\n",
-    "            \"resume_training\": False,\n",
-    "            \"train_size\": 0.5,\n",
-    "            \"val_size\": 0.3,\n",
-    "            \"test_size\": 0.2,\n",
-    "        },\n",
-    "        \"seed\": 42,\n",
-    "    }\n",
-    "]"
+    "# experiments = [\n",
+    "#     {\n",
+    "#         \"dataset\": {\n",
+    "#             \"video_path\": r\"./drive/MyDrive/Megatron_DeepFake/dataset_processed\",\n",
+    "#             \"num_frames\": 20,\n",
+    "#             \"random_initial_frame\": False,\n",
+    "#             \"depth_anything_size\": \"Small\",\n",
+    "#         },\n",
+    "#         \"dataloader\": {\n",
+    "#             \"batch_size\": 120,\n",
+    "#             \"repvit_model\": \"repvit_m0_9.dist_300e_in1k\",\n",
+    "#             \"num_workers\": 0,\n",
+    "#             \"pin_memory\":False\n",
+    "#         },\n",
+    "#         \"transformer\": {\n",
+    "#             \"d_model\": 384,\n",
+    "#             \"n_heads\": 2,\n",
+    "#             \"n_layers\": 1,\n",
+    "#             \"d_ff\": 1024,\n",
+    "#         },\n",
+    "#         \"train\": {\n",
+    "#             \"learning_rate\": 0.001,\n",
+    "#             \"epochs\": 3,\n",
+    "#             \"tmp_dir\" : \"./drive/MyDrive/Megatron_DeepFake/batches\",\n",
+    "#             \"log_dir\": \".//drive/MyDrive/Megatron_DeepFake/data\",\n",
+    "#             \"early_stop_counter\": 10,\n",
+    "#             \"resume_training\": False,\n",
+    "#             \"train_size\": 0.5,\n",
+    "#             \"val_size\": 0.3,\n",
+    "#             \"test_size\": 0.2,\n",
+    "#         },\n",
+    "#         \"seed\": 42,\n",
+    "#     }\n",
+    "# ]"
    ]
   },
   {
@@ -74,12 +74,13 @@
     "    {\n",
     "        \"dataset\": {\n",
     "            \"video_path\": r\"H:\\My Drive\\Megatron_DeepFake\\dataset_processed\",\n",
-    "            \"num_frames\": 20,\n",
+    "            \"num_frames\": 1,\n",
     "            \"random_initial_frame\": False,\n",
     "            \"depth_anything_size\": \"Small\",\n",
+    "            \"num_videos\": 5,\n",
     "        },\n",
     "        \"dataloader\": {\n",
-    "            \"batch_size\": 128,\n",
+    "            \"batch_size\": 4,\n",
     "            \"repvit_model\": \"repvit_m0_9.dist_300e_in1k\",\n",
     "            \"num_workers\": 0,\n",
     "            \"pin_memory\":False\n",
@@ -170,13 +171,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "torch.Size([128, 20, 384])\n",
+      "torch.Size([128, 20, 384])\n",
+      "torch.Size([128, 20, 384])\n",
+      "torch.Size([128, 20, 384])\n",
+      "torch.Size([128, 20, 384])\n",
+      "torch.Size([128, 20, 384])\n",
+      "torch.Size([128, 20, 384])\n",
+      "torch.Size([128, 20, 384])\n",
+      "torch.Size([128, 20, 384])\n",
+      "torch.Size([128, 20, 384])\n",
       "torch.Size([128, 20, 384])\n",
       "torch.Size([128, 20, 384])\n",
       "torch.Size([128, 20, 384])\n",
