updated configuration and trainer

--- a/notebooks/train.ipynb
+++ b/notebooks/train.ipynb
@@ -56,20 +56,23 @@
     "except ImportError:\n",
     "    experiment = ExperimentConfig(\n",
     "        dataset=DatasetConfig(\n",
-    "            video_path=r\"H:\\My Drive\\Megatron_DeepFake\\dataset_processed\",\n",
+    "            video_path=r\"G:\\My Drive\\Megatron_DeepFake\\dataset_processed\",\n",
     "            num_frames=5,\n",
     "            random_initial_frame=False,\n",
     "            depth_anything_size=\"Small\",\n",
-    "            num_video= 10,\n",
+    "            num_video= 20,\n",
     "        ),\n",
     "        dataloader=DataloaderConfig(\n",
     "            batch_size = 8,\n",
     "        ),\n",
     "        transformer=TransformerConfig(\n",
-    "            d_model=384,\n",
+    "            d_model=600,\n",
     "            n_heads=6,\n",
     "            n_layers=4,\n",
     "            d_ff=2048,\n",
+    "            dropout= 0.3,\n",
+    "            activation = \"gelu\",\n",
+    "            pooling_type = \"max\",\n",
     "        ),\n",
     "        train=TrainConfig(\n",
     "            learning_rate=0.001,\n",
@@ -78,7 +81,8 @@
     "            log_dir= \"./../data/exp1\",\n",
     "            resume_training=False,\n",
     "            train_size=0.5,\n",
-    "            val_size=0.4,\n",
+    "            val_size=0.3,\n",
+    "            weight_decay =0.1\n",
     "        ),\n",
     "        seed=42,\n",
     "    )\n",
@@ -91,12 +95,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "trainer = Trainer(experiment)\n",
-    "trainer.optimized_train_and_validate()"
+    "# trainer.optimized_train_and_validate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os \n",
+    "import torch\n",
+    "\n",
+    "path = r\"G:\\My Drive\\Megatron_DeepFake\\batches\\all\\batch_size_128\\num_frames_20\\depth_anything_size_Small\\repvit_model_repvit_m0_9dist_300e_in1k\\d_model_384\\\\\"\n",
+    "\n",
+    "\n",
+    "cnt =0\n",
+    "for elem in os.listdir(path):\n",
+    "    try:\n",
+    "        if \"train_rgb\" in elem:\n",
+    "            \n",
+    "print(cnt)"
    ]
   },
   {
